--- a/competences.html
+++ b/competences.html
@@ -22,13 +22,13 @@
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
             <img
-              src="/img/pinguin.png"
+              src="/img/cv-et-cv.png"
               alt="Logo"
-              width="30"
-              height="24"
-              class="d-inline-block align-text-top"
+              width="40"
+              height="34"
+              class="d-inline-block align-text-center"
             />
-            X_CYL
+            <b>L.S.</b>
           </a>
           <button
             class="navbar-toggler"
