--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
             <img
-              src="/img/pinguin.png"
+              src="/img/cv-et-cv.png"
               alt="Logo"
-              width="30"
-              height="24"
-              class="d-inline-block align-text-top"
+              width="40"
+              height="34"
+              class="d-inline-block align-text-center"
             />
-            X_CYL
+            <b>L.S.</b>
           </a>
           <button
             class="navbar-toggler"
@@ -68,7 +68,7 @@
             en détail ci-dessous...
           </p>
           <div class="btn-container">
-            <button class="btn btn-outline-info">Télécharger mon CV</button>
+            <a class="btn btn-outline-info" href="/img/cv Ludo 28 05 20_2.pdf" target="_blank">Télécharger mon CV</a>
           </div>
           <div class="" id="mouseBtn">
             <a href="#about"><i class="bi bi-mouse-fill"></i></a>
